--- a/style.css
+++ b/style.css
@@ -161,6 +161,58 @@ a#sidebartoggle {
     border-radius: 3px 3px 0 0;
     box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px; }
 
+#serverinfo {
+  display: none;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 180px;
+  z-index: 12;
+  background: white;
+  border-radius: 3px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
+  -webkit-transition: all 80ms ease-in-out;
+  -moz-transition: all 80ms ease-in-out;
+  -ms-transition: all 80ms ease-in-out;
+  -o-transition: all 80ms ease-in-out;
+  transition: all 80ms ease-in-out; }
+  @media all and (max-width: 599px) {
+    #serverinfo {
+      display: none !important; } }
+  #serverinfo p {
+    padding: 10px;
+    font-size: 13px;
+    line-height: 16px;
+    color: #444;
+    font-weight: 500; }
+    #serverinfo p span#serverinfo_status {
+      display: block;
+      float: left;
+      width: 12px;
+      height: 12px;
+      margin: 2px 8px 0 2px;
+      border-radius: 6px;
+      background: #C5513F; }
+      #serverinfo p span#serverinfo_status.online {
+        background: #3EC550; }
+  #serverinfo #serverinfo_harvest {
+    border-top: 1px solid #ddd;
+    padding-bottom: 4px;
+    display: none; }
+    #serverinfo #serverinfo_harvest h2 {
+      color: #777;
+      font-weight: 500;
+      font-size: 12px;
+      padding: 8px 10px 2px 10px; }
+    #serverinfo #serverinfo_harvest p {
+      font-weight: 400;
+      padding: 4px 10px; }
+  #serverinfo.small {
+    width: 80px; }
+    #serverinfo.small p span.label, #serverinfo.small h2 span, #serverinfo.small p span.type {
+      display: none; }
+
 #searchbox {
   position: absolute;
   top: 15px;
@@ -250,6 +302,81 @@ a#sidebartoggle {
       #searchbox #searchresults a.location:hover {
         background-color: #f7f7f7; }
 
+#vote_reminder {
+  display: none;
+  position: absolute;
+  top: 15px;
+  left: 395px;
+  width: 400px;
+  height: 46px;
+  line-height: 46px;
+  z-index: 20;
+  background: white;
+  border-radius: 3px;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
+  -webkit-transition: all 80ms ease-in-out;
+  -moz-transition: all 80ms ease-in-out;
+  -ms-transition: all 80ms ease-in-out;
+  -o-transition: all 80ms ease-in-out;
+  transition: all 80ms ease-in-out; }
+  #vote_reminder p {
+    font-size: 14px;
+    display: block; }
+    #vote_reminder p a {
+      color: #2196F3; }
+  #vote_reminder span {
+    font-weight: 500;
+    font-size: 12px;
+    color: #aaa;
+    line-height: 32px;
+    cursor: pointer;
+    -webkit-transition: all 80ms ease-in-out;
+    -moz-transition: all 80ms ease-in-out;
+    -ms-transition: all 80ms ease-in-out;
+    -o-transition: all 80ms ease-in-out;
+    transition: all 80ms ease-in-out; }
+    #vote_reminder span:hover {
+      background: #eee; }
+    #vote_reminder span.close_full {
+      display: none; }
+    #vote_reminder span.close {
+      float: right;
+      border-left: 1px solid #ddd;
+      width: 46px;
+      height: 46px;
+      line-height: 46px;
+      font-size: 16px;
+      border-radius: 0 3px 3px 0; }
+
+@media all and (max-width: 999px) {
+  body.no_sidebar #vote_reminder {
+    width: auto;
+    right: 210px;
+    height: auto; }
+    body.no_sidebar #vote_reminder span.close {
+      display: none; }
+    body.no_sidebar #vote_reminder span.close_full {
+      display: block;
+      border-top: 1px solid #ddd; } }
+
+@media all and (max-width: 919px) {
+  body.no_sidebar #vote_reminder {
+    right: 15px; }
+    body.no_sidebar #vote_reminder span.close_full {
+      line-height: 46px; } }
+
+@media all and (max-width: 699px) {
+  body.no_sidebar #vote_reminder {
+    left: 60px; } }
+
+@media all and (max-width: 399px) {
+  body.no_sidebar #vote_reminder {
+    top: 0;
+    left: 0;
+    right: 0;
+    border-radius: 0; } }
+
 body.sidebar a#sidebartoggle {
   left: 300px; }
   @media all and (max-width: 399px) {
@@ -268,6 +395,10 @@ body.sidebar #searchbox {
     body.sidebar #searchbox {
       display: none; } }
 
+@media all and (max-width: 899px) {
+  body.sidebar #serverinfo {
+    display: none !important; } }
+
 body.sidebar #map {
   left: 300px;
   width: calc(100% - 300px); }
@@ -275,6 +406,39 @@ body.sidebar #map {
     body.sidebar #map {
       left: 260px;
       width: calc(100% - 260px); } }
+
+body.sidebar #vote_reminder {
+  left: 695px; }
+  @media all and (max-width: 1304px) {
+    body.sidebar #vote_reminder {
+      width: auto;
+      right: 210px;
+      height: auto; }
+      body.sidebar #vote_reminder span.close {
+        display: none; }
+      body.sidebar #vote_reminder span.close_full {
+        display: block;
+        border-top: 1px solid #ddd; } }
+  @media all and (max-width: 1209px) {
+    body.sidebar #vote_reminder {
+      right: 15px; }
+      body.sidebar #vote_reminder span.close_full {
+        line-height: 46px; } }
+  @media all and (max-width: 1029px) {
+    body.sidebar #vote_reminder {
+      left: 360px; } }
+  @media all and (max-width: 679px) {
+    body.sidebar #vote_reminder {
+      left: 300px;
+      top: 0;
+      right: 0;
+      border-radius: 0; } }
+  @media all and (max-width: 599px) {
+    body.sidebar #vote_reminder {
+      top: 0;
+      left: 0;
+      right: 0;
+      border-radius: 0; } }
 
 #addform {
   display: none;
