Added "nearby" search, fixed harvest season display, added harvest info in infobox, added submitted locations

--- a/src/index.jade
+++ b/src/index.jade
@@ -32,7 +32,7 @@ html
 			a#marker_guard_towers.selected(href='#' onclick='toggle_markers(\'guard_towers\'); return false') #[span] Guard towers
 			a#marker_resources.selected(href='#' onclick='toggle_markers(\'resources\'); return false') #[span] Resources
 			a#marker_poi.selected(href='#' onclick='toggle_markers(\'poi\'); return false') #[span] Points of interest
-			a#marker_trees(href='#' onclick='toggle_markers(\'trees\'); return false') #[span] Forests
+			a#marker_trees.selected(href='#' onclick='toggle_markers(\'trees\'); return false') #[span] Forests
 
 			.div
 
