--- a/src/style.sass
+++ b/src/style.sass
@@ -327,6 +327,8 @@ a#sidebartoggle
 				background-image: url('images/deed_solo_icon.png')
 			&.ruins
 				background-image: url('images/ruins_icon.png')
+			&.forest
+				background-image: url('images/tree_icon.png')
 			&.coords
 				background-image: url('images/location_icon.png')
 
